Fix Carousel Button Malfunction
Another element was covering it, rendering the buttons unusable

--- a/ncoover-website/src/components/portfolio/carousel/Carousel.module.css
+++ b/ncoover-website/src/components/portfolio/carousel/Carousel.module.css
@@ -6,6 +6,7 @@
 
 .arrowControl {
 	height: 8rem;
+	z-index: 1;
 }
 
 .carousel {
